@@ -39,7 +39,7 @@ noinst_HEADERS = glib-support.h
 
 libgw_guile_gnome_glib_la_SOURCES = guile-gnome-gw-glib.c glib-support.c
 libgw_guile_gnome_glib_la_CFLAGS = -I$(srcdir)/../gobject \
-	$(GLIB_CFLAGS) $(GUILE_CFLAGS) $(G_WRAP_CFLAGS)
+	$(AM_CFLAGS) $(GLIB_CFLAGS) $(GUILE_CFLAGS) $(G_WRAP_CFLAGS)
 libgw_guile_gnome_glib_la_LIBADD = $(GLIB_LIBS) $(GUILE_LIBS) \
 	$(G_WRAP_LINK_ARGS) ../gobject/libguile-gnome-gobject.la
 libgw_guile_gnome_glib_la_LDFLAGS = -module
