@@ -1,3 +1,8 @@
+2004-05-14  Andy Wingo  <wingo@pobox.com>
+
+	* gobject/gtype.c (scm_gtype_to_class): Now exported as part of
+	the C API (formerly static SCM _gtype_to_class).
+
 2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>
 
 	* gtk.scm (on-get-flags): Provide default implementation returning 0.
